# Opal

./: CMakeLists.txt
include/: defines.h  opal.h  opal_define_buffer.h  opal_define_framebuffer.h  opal_define_image.h  opal_define_material.h  opal_define_mesh.h  opal_define_renderpass.h  opal_define_window.h  opal_defines.h  vulkan_defines.h
include/Opal/: defines.h  vulkan_defines.h
src/: buffer.c  common.h  core.c  define_buffer.h  define_framebuffer.h  define_image.h  define_material.h  define_mesh.h  define_renderpass.h  define_window.h  defines.h  image.c  material.c  mesh.c  opal.c  opal_image.c  platform.c  renderpass.c  vulkan.c  vulkan_buffer.c  vulkan_command.c  vulkan_framebuffer.c  vulkan_image.c  vulkan_material.c  vulkan_render.c  vulkan_renderpass.c  vulkan_window.c
src/vulkan/: buffer.c  command.c  core.c  core_init.c  core_update.c  image.c  material.c  mesh.c  rendering.c  renderpass.c  vulkan.c  vulkan.h  vulkan_buffer.c  vulkan_common.h  vulkan_core.c  vulkan_defines.h  vulkan_framebuffer.c  vulkan_image.c  vulkan_platform.c  vulkan_render.c  vulkan_renderpass.c  vulkan_shader.c  vulkan_tools.c  vulkan_window.c  window.c
